# fastapi-cqrs

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HELP.md  README.md  docker-compose.yaml  prd.md  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/admin/board/: router.py  schemas.py
app/admin/dashboard/: router.py  schemas.py
app/admin/user/: router.py  schemas.py
app/ai/: router.py  schemas.py  service.py
app/ai/providers/: anthropic.py  base.py  gemini.py  openai.py
app/auth/: router.py  schemas.py
app/auth/repository/: command_repository.py  query_repository.py
app/auth/service/: command_service.py  (+1 more)
app/board/: router.py  schemas.py
app/common/: exception_handlers.py  exceptions.py  middleware.py  pagination.py  schemas.py
app/dashboard/: router.py  schemas.py
app/file/: router.py  schemas.py
app/security/: dependencies.py  jwt.py  password.py
app/user/: router.py  schemas.py
docs/: 0309_2248_구현계획서.md  0310_0018_구현현황서.md  0310_0044_Phase9_구현계획서.md  0310_0203_Phase9_테스트결과서.md  progress.md
docs/phase-0/: step-01-scaffolding.md
docs/phase-1/: step-01-auth.md
docs/phase-2/: step-01-user.md
docs/phase-3/: step-01-board.md
docs/phase-4/: step-01-file.md
docs/phase-5/: step-01-dashboard.md
docs/phase-6/: step-01-ai-chat.md
docs/phase-7/: step-01-admin.md
docs/phase-8/: step-01-system.md
docs/phase-9/: step-01-integration-tests.md
tests/: conftest.py  test_admin.py  test_ai.py  test_auth.py  test_board.py  test_dashboard.py  test_file.py  test_health.py  test_system.py  test_user.py
(+54 files in other folders)
